src/test/ui/macros/unreachable-format-args.edition_2015.stderr
error: there is no argument named `x`
  --> $DIR/unreachable-format-args.rs:13:5
   |
LL |     unreachable!("x is {x} and y is {y}", y = 0);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: did you intend to capture a variable `x` from the surrounding scope?
   = note: to avoid ambiguity, `format_args!` cannot capture variables when the format string is expanded from a macro
   = note: this error originates in the macro `$crate::concat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

